Introducting inventory service
