# inventoryServer/inventory/api/v1/index.js
@@ -1,0 +1,2 @@
+module.exports = require('./inventory.routes');
+
