# inventoryServer/inventory/api/v1/inventory.service.js
@@ -1,0 +1,17 @@
+const dao = require('./inventory.dao');
+const logger = require('../../log');
+
+const getAllCompleteInventory = (refDate) => {
+    logger.info('service getAllCompleteInventory');
+    return dao.getAllCompleteInventory(refDate);
+};
+
+const addCompleteInventory = (compInv, refDate) => {
+    logger.info('service addCompleteInventory');
+    return dao.addCompleteInventory(compInv, refDate);
+};
+
+module.exports = {
+    getAllCompleteInventory,
+    addCompleteInventory
+}
